welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:3: error: not found: value While
While (!estSurBiscuit()) { avance(); pas = pas +1 }
^